--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,12 @@
 
   <body>
     <!-- Header -->
+    <div class="row">
+          <div class="col-md text-center my-4">
+            <h1>Violita Aditya Zahrah|Sycamore Class</h1>
+          </div>
+        </div>
+
     <nav class="navbar navbar-expand-lg navbar-white bg-white">
       <div class="container">
         <img src="{{url_for('static', filename='images/orbit.png')}}" height="50" , width="auto" />
@@ -26,9 +32,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mob-navbar">
-          <div class="navbar-nav mt-2 mb-2 mb-lg-0 mx-auto">
+          <div class="row text-center mx-auto">
             <h4>Chatbot Sistem Rekomendasi Kampus Merdeka</h4>
           </div>
+        </div>
           <div class="d-flex">
             <img src="{{url_for('static', filename='images/kampus-merdeka.png')}}" height="50" , width="auto" />
           </div>
